[package]
name = "github_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
reqwest = { version = "0.11" }
tokio = {version = "1.24.2", features = ["time", "macros", "rt-multi-thread", "sync"]}
futures = "0.3.25"

progress_view = { path = "progress_view" }

[workspace]
members = ["progress_view"]