[package]
name = "progress_view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
futures = "0.3.25"
tracing = "0.1.37"
tokio = {version = "1.24.2", features = ["time", "macros", "rt-multi-thread", "sync"]}
